# odoo-pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yml
src/hg_odoo_pre_commit_hooks/: check_method_order.py
test_repo/method_not_ordered_module/: __manifest__.py
test_repo/method_not_ordered_module/models/: __init__.py  action_methods.py  class_constants.py  compute_inverse_search.py  constraints_methods.py  crud_methods.py  default_methods.py  field_declarations.py  init_method.py  multiple_models.py  onchange_methods.py  other_methods.py  private_attributes.py  selection_computed_methods.py  several_errors.py  sql_constraints.py
test_repo/method_ordered_module/: __manifest__.py
test_repo/method_ordered_module/models/: foo_field_declarations.py  model.py  new_crud_methods.py
tests/: test_constrains_decorator.py  test_exit_zero.py  test_method_order.py  test_multiple_models.py  test_several_errors.py
