[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hg-odoo-pre-commit-hooks"
description = "Heligrafics pre-commit hooks to check Odoo code style and quality"
version = "0.0.1"
requires-python = ">=3.8"

[project.scripts]
odoo-method-order = "hg_odoo_pre_commit_hooks.check_method_order:main"

[project.optional-dependencies]
test = [
    "coverage",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tox",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version = "0.0.1"
version_files = ["pyproject.toml:version"]
